print settings info as a footer on bottom of settings page fix display of scrollbar on settingspage

--- a/src/pages/SettingsPage/GeneralSettings.module.css
+++ b/src/pages/SettingsPage/GeneralSettings.module.css
@@ -13,6 +13,15 @@
     flex-wrap: wrap;
 }
 
+.footer{
+    position: fixed;
+    right: 0;
+    bottom: 3px;
+    width: 110px;
+    opacity: 0.8;
+    color: white;
+}
+
 /* On screens that are 722px wide or less, make the columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 722px) {
     .infoheader {
